# Praetor

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.offline.txt
docs/: API.md  onboarding.md
scripts/: cerrar_turno.sh  install.sh
src/praetor/: __init__.py  config.py  logger.py  main.py
src/praetor_gateway/: __init__.py  audit.py  bitacora.py  config.py  crypto.py  main.py
